# Pier

./: .gitignore  FEATURES.md  Package.swift  README.md  build.sh  run.sh
.github/workflows/: release.yml
PierApp/: Info.plist  PierApp.entitlements
PierApp/Sources/App/: AppDelegate.swift  PierApp.swift  main.swift
PierApp/Sources/Bridge/: RustBridge.swift
PierApp/Sources/Helpers/: L10n.swift
PierApp/Sources/Models/: AppTheme.swift  CommandCompleter.swift  ConnectionProfile.swift  FileItem.swift  SQLHighlighter.swift  SSHKnownHosts.swift  ShellHighlighter.swift  TerminalSession.swift  TerminalTheme.swift
PierApp/Sources/Resources/: AppIcon.icns
PierApp/Sources/Services/: CommandRunner.swift  KeychainService.swift  LLMService.swift  RemoteServiceManager.swift  SSHBackend.swift  SSHControlMaster.swift  SparkleUpdater.swift  SystemSSHBackend.swift  UpdateChecker.swift
PierApp/Sources/ViewModels/: AIViewModel.swift  DatabaseViewModel.swift  DockerViewModel.swift  FileViewModel.swift  GitViewModel+Branch.swift  GitViewModel+Config.swift  GitViewModel+Rebase.swift  GitViewModel+Remote.swift  (+11 more)
pier-bridge/: module.modulemap
pier-bridge/include/: pier_core.h
pier-core/: Cargo.toml  build.rs  cbindgen.toml
pier-core/src/: ffi.rs  git_graph.rs  lib.rs
pier-core/src/crypto/: mod.rs
pier-core/src/search/: mod.rs
pier-core/src/ssh/: mod.rs  service_detector.rs  session.rs  sftp.rs
pier-core/src/terminal/: emulator.rs  mod.rs  pty.rs
scripts/: Pier.entitlements  build_release.sh  codesign.sh  package_dmg.sh  profile.sh  security_audit.sh
(+39 files in other folders)
